--- a/assets/styles.css
+++ b/assets/styles.css
@@ -23,7 +23,6 @@ nav {
     align-items: center;
     width: 100vw;
     padding: 1%;
-
 }
 
 nav h3 {
@@ -46,7 +45,6 @@ nav ul li a {
     text-decoration: none;
     color: var(--color-primary);
     font-weight: 900;
-
 }
 
 main {
@@ -54,10 +52,11 @@ main {
     background-color: var(--color-main);
     height: 100vh;
     width: 100vw;
+    line-height: 2;
 }
 
 main h4 {
-    font-size: 120%;
+    font-size: 180%;
     font-family: 'Rubik', sans-serif;
     color: #CCF381;
     text-align: center;
@@ -66,7 +65,7 @@ main h4 {
 
 main p {
     margin-top: 5%;
-    font-size: 70%;
+    font-size: 120%;
     font-family: 'Quicksand', sans-serif;
     color: #dae2ca;
 
@@ -77,7 +76,7 @@ main p {
     flex-direction: column;
 }
 #about-me {
-    flex: 2 1 0;
+    flex: 1 1 0;
     height: 100vh;
     margin: 5% 0% 0% 5%;
     padding: 5%;
@@ -93,7 +92,7 @@ figure {
 }
 
 figure img{
-    width: 55%;
+    width: 80%;
     border-radius: 10%;
     margin: 25% 10% 0% 0%; 
 }
@@ -132,7 +131,7 @@ figure img:hover{
 }
 
 .portfolio-card-description img {
-    height: 5em;
+    height: 10em;
     width: 73%;
     margin-top: 5%;
 }
@@ -177,35 +176,41 @@ footer ul li a {
 
 /* ***** responsive ******* */
 
+/* adjust responsiveness for navbar */
 @media only screen and (max-width: 630px) {
     nav ul li {
         margin-left: 10%;
     }
 
-    main h4 {
-        font-size: 70%;
-    }
-
-    main p {
-        word-wrap: break-word;
-    }
-
   }
 
-  @media only screen and (max-width: 530px) {
+  /* adjust responsiveness to adapt font sizes for both profile header and description */
+  @media only screen and (max-width: 770px) {
+      main p {
+          font-size: 100%;
+      }
+
       main h4 {
-          font-size: 50%;
-      }
-
-
+        font-size: 120%;
+    }
   }
 
-  @media only screen and (max-width: 500px) {
-      figure img {
-          width: 65%;
-      }
-  }
+  @media only screen and (max-width: 650px) {
+    main p {
+        font-size: 90%;
+    }
 
+    main h4 {
+      font-size: 65%;
+      font-weight: 900;
+  }
+}
+
+
+
+
+
+  /* header nav bar responsiveness */
   @media only screen and (max-width: 430px) {
     nav ul li {
         margin-left: 1%;
