--- a/assets/styles.css
+++ b/assets/styles.css
@@ -19,7 +19,7 @@ header {
 
 nav {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     width: 100vw;
     padding: 1%;
@@ -71,10 +71,6 @@ main p {
 
 }
 
-#about-me, #aside {
-    display: flex;
-    flex-direction: column;
-}
 #about-me {
     flex: 1 1 0;
     height: 100vh;
@@ -105,26 +101,24 @@ figure img:hover{
 0 0 15px rgb(34, 110, 11);
 }
 
+/********** stylling for work.html webpage *****************/
 
 #portfolio {
     font-size: 120%;
     font-family: 'Rubik', sans-serif;
     color: #67862b;
     text-align: center;
-    margin: 0 auto;
     background-color:rgb(236, 223, 223);
-    width: 50%;
-    height: 90%;
-    margin-top: 2%;
+    width: 95%;
+    height: 85%;
+    margin: 1%;
     display: flex;
     flex-wrap: wrap;
-    
 }
 
 .portfolio-card {
     width: 50%;
 }
-
 
 .portfolio-card-description {
     position: relative;
@@ -140,13 +134,12 @@ figure img:hover{
     color: #baff31;
     font-size: 50%;
     text-decoration: none;
-    margin-left: 5%;
     position: absolute;
     top: 71%;
     left: 0%;
     width: 77%;
     padding: 2%;
-    margin: 2% 0 0 12%;
+    margin: 2% 12% 0 12%;
     background-color: rgb(15, 108, 121);
 }
 
@@ -205,8 +198,7 @@ figure img:hover{
         padding-right: 16%;
     }
     nav ul li {
-        margin-left: 1%;
-        margin-right: 5%;
+        margin: 0% 5% 0% 1%;
         font-size: 50%;
     }
 
@@ -220,8 +212,14 @@ figure img:hover{
     }
 
     #contact-me {
-        padding-right: 10%;
+        padding: 8%;
     }
 
   }
   
+  @media only screen and (max-width: 500px) {
+      #portfolio img {
+          /* keeps aspect ratio but resized to fit with given dimension */
+          object-fit: contain;
+      }
+  }
