applied object-fit: cover to images in works.html webpage

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -143,6 +143,7 @@ figure img:hover{
 
 .portfolio-card-description img {
     height: 10em;
+    object-fit: cover;
     width: 73%;
     margin-top: 5%;
 }
